src/templates/EmailEditorSidebar/EmailEditorSidebarAccordion.css
.sidebar-accordion-container .header {
  align-items: center;
  display: flex;
  justify-content: space-between;
  padding-top: 1rem;
  padding-left: 2.5rem;
  padding-right: 2.125rem;
}

.sidebar-accordion-container h2 {
  font-size: var(--font-large);
  font-weight: var(--weight-bold);
  margin: 0;
}

.sidebar-accordion-container .accordion-controls {
  border: 1px solid var(--gray-medium);
  border-radius: 10px;
  overflow: hidden;
}

.sidebar-accordion-container .accordion-controls button {
  background-color: var(--white);
  border: 0;
  font-family: var(--sans-serif);
  font-size: var(--font-small);
  padding: 0.5rem 1rem;
  transition: background-color 50ms ease-in-out;
}

.sidebar-accordion-container .accordion-controls button:active {
  background-color: var(--gray-light);
}

.sidebar-accordion-container .accordion-controls button:last-of-type {
  border-left: 1px solid var(--gray-medium);
}

.accordion-email-component {
  --left-spacing: 2.5rem;
  --right-spacing: 2.125rem;
  border-bottom: 1px solid #e0e0e0;
  padding-bottom: 0.25rem;
  padding-top: 1.5rem;
  transition: background-color 150ms ease-in-out;
}

.accordion-email-component.active-email-component:not(:has(button[aria-expanded='true'])),
.accordion-email-component.active-email-component:has([data-disabled='true']) {
  background-color: var(--blue-white);
}

.accordion-email-component[data-disabled],
.accordion-email-component[data-state='collapsed'] {
  padding-bottom: 1.5rem;
}

.accordion-email-component:last-of-type {
  border-bottom: 0;
}

.accordion-email-component button {
  cursor: pointer;
}

.accordion-email-component button[aria-expanded='false'] + .pointer-container {
  transform: rotate(90deg);
}

.accordion-email-component button[aria-expanded='true'] + .pointer-container {
  transform: rotate(0deg);
}

.accordion-email-component button[disabled] + .pointer-container {
  display: none;
}

.accordion-email-component .accordion-button-and-toggle {
  align-items: center;
  border-radius: 5px;
  display: flex;
  justify-content: space-between;
  padding-left: var(--left-spacing);
  padding-right: var(--right-spacing);
  transition: background-color ease-in-out 150ms;
}

.accordion-email-component h3 {
  align-items: center;
  display: flex;
  margin: 0;
  position: relative;
  width: 100%;
}

.accordion-email-component button {
  border: 0;
  background-color: transparent;
  font-size: var(--font-large);
  font-weight: var(--weight-bold);
  padding: 0;
  text-align: left;
  width: 100%;
}

.accordion-email-component button[disabled] {
  color: var(--black);
  cursor: default;
}

.accordion-email-component .pointer-container {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  right: 0;
  pointer-events: none;
  transition: transform 150ms ease-in-out;
}

.accordion-email-component .description {
  margin: 0;
  padding: 0;
  padding-left: var(--left-spacing);
  padding-top: 2px;
}

.accordion-email-component .description,
.accordion-email-component .description > a,
.accordion-email-component .required-label {
  color: var(--gray-dark);
  font-size: var(--font-tiny);
  font-style: italic;
}

.accordion-email-component .description > a {
  text-decoration: underline;
}

.accordion-email-component .required-label {
  align-self: flex-end;
}

.accordion-email-subcomponent {
  margin: 1rem 0;
  padding-bottom: 0.75rem;
  padding-top: 0.75rem;
  padding-left: var(--left-spacing);
  padding-right: var(--right-spacing);
  position: relative;
  transition: background-color ease-in-out 150ms;
}

.accordion-email-subcomponent.active-email-subcomponent {
  background-color: var(--blue-white);
}

.accordion-email-subcomponent .bar {
  background-color: var(--gray-light-medium);
  left: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  width: 0.625rem;
  transition: background-color 150ms ease-in-out;
}

.accordion-email-subcomponent .bar.visible {
  background-color: var(--blue-dark);
}

.accordion-email-subcomponent .label-and-toggle {
  align-items: center;
  color: var(--black);
  display: flex;
  justify-content: space-between;
  transition: color 150ms ease-in-out;
}

.accordion-email-subcomponent .label-and-toggle.invisible {
  color: var(--gray-medium-dark);
}

.accordion-email-subcomponent label {
  font-weight: var(--weight-bold-light);
  cursor: pointer;
}

.accordion-email-subcomponent .description {
  padding-left: 0;
  transition: color 150ms ease-in-out;
}

.accordion-email-subcomponent .description.invisible {
  color: var(--gray-medium-dark);
}

